--- a/packages.config
+++ b/packages.config
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.Graph.Core" version="1.15.0" />
+  <package id="Microsoft.Graph.Core" version="1.18.0" />
   <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="9.0.1" targetFramework="netstandard1.0" />
-  <package id="Microsoft.Graph" version="1.16.0" />
+  <package id="Microsoft.Graph" version="1.18.0" />
+  <package id="Microsoft.Graph.Beta" version="0.8.0-preview" />
   <package id="System.ValueTuple" version="4.3.0" /> 
   <package id="System.Net.Http" version="4.3.3" targetFramework="netstandard1.3" />
   <!-- <package id="Microsoft.Graph.Auth" version="1.0.0-preview.0" /> -->
